--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -1,3 +1,8 @@
+.align-sub 
+{
+  vertical-align: sub;
+}
+
 @font-face {
     font-family: "Avenir Next Cyr";
     src: url("/assets/fonts/avenir-next/AvenirNextCyr-Bold.eot");
