--- a/public/assets/styles/custom.scss
+++ b/public/assets/styles/custom.scss
@@ -2,6 +2,18 @@
   vertical-align: sub;
 }
 
+// .ant-input:hover {
+//   border-right-width: 0px !important;
+// }
+
+// .ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled):hover {
+//   border-right-width: 0px !important;
+// }
+
+.ant-select:not(.ant-select-disabled):hover .ant-select-selector {
+  border-right-width: 0px !important;
+}
+
 @font-face {
   font-family: "Avenir Next Cyr";
   src: url("/assets/fonts/avenir-next/AvenirNextCyr-Bold.eot");
