fixed right border issue
Navbar search right border was not going away, toggling between light and dark mode reset it. Now fixed

--- a/public/assets/styles/custom.scss
+++ b/public/assets/styles/custom.scss
@@ -2,16 +2,20 @@
   vertical-align: sub;
 }
 
-// .ant-input:hover {
-//   border-right-width: 0px !important;
-// }
-
-// .ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled):hover {
-//   border-right-width: 0px !important;
-// }
-
-.ant-select:not(.ant-select-disabled):hover .ant-select-selector {
+.ant-input:hover {
   border-right-width: 0px !important;
+}
+
+.dark {
+  .ant-select:not(.ant-select-disabled):hover .ant-select-selector {
+    border-right-width: 0px !important;
+  }
+}
+
+.light-mode {
+  .ant-select:not(.ant-select-disabled):hover .ant-select-selector {
+    border-right-width: 0px !important;
+  }
 }
 
 @font-face {
