--- a/public/assets/styles/custom.scss
+++ b/public/assets/styles/custom.scss
@@ -98,104 +98,58 @@
   font-style: normal;
 }
 
-/* poppins-regular - latin */
 @font-face {
-  font-family: "Poppins";
+  font-family: "TT Norms Pro";
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
-  src: url("/assets/fonts/poppins/poppins-v15-latin-regular.eot"); /* IE9 Compat Modes */
-  src: local("Poppins Regular"), local("Poppins-Regular"),
-    url("/assets/fonts/poppins/poppins-v15-latin-regular.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("/assets/fonts/poppins/poppins-v15-latin-regular.woff2")
-      format("woff2"),
-    /* Super Modern Browsers */
-      url("/assets/fonts/poppins/poppins-v15-latin-regular.woff") format("woff"),
-    /* Modern Browsers */
-      url("/assets/fonts/poppins/poppins-v15-latin-regular.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("/assets/fonts/poppins/poppins-v15-latin-regular.svg#Poppins")
-      format("svg"); /* Legacy iOS */
+  src: local("TT Norms Pro Regular"),
+    url("/assets/fonts/tt-norms/TT Norms Pro Regular.woff") format("woff");
 }
-/* poppins-500 - latin */
+
 @font-face {
-  font-family: "Poppins";
+  font-family: "TT Norms Pro";
+  font-style: normal;
+  font-weight: 300;
+  src: local("TT Norms Pro Light"),
+    url("/assets/fonts/tt-norms/TT Norms Pro Light.woff") format("woff");
+}
+
+@font-face {
+  font-family: "TT Norms Pro";
   font-style: normal;
   font-weight: 500;
-  font-display: swap;
-  src: url("/assets/fonts/poppins/poppins-v15-latin-500.eot"); /* IE9 Compat Modes */
-  src: local("Poppins Medium"), local("Poppins-Medium"),
-    url("/assets/fonts/poppins/poppins-v15-latin-500.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("/assets/fonts/poppins/poppins-v15-latin-500.woff2")
-      format("woff2"),
-    /* Super Modern Browsers */
-      url("/assets/fonts/poppins/poppins-v15-latin-500.woff") format("woff"),
-    /* Modern Browsers */ url("/assets/fonts/poppins/poppins-v15-latin-500.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("/assets/fonts/poppins/poppins-v15-latin-500.svg#Poppins")
-      format("svg"); /* Legacy iOS */
+  src: local("TT Norms Pro Medium"),
+    url("/assets/fonts/tt-norms/TT Norms Pro Medium.woff") format("woff");
 }
-/* poppins-600 - latin */
+
 @font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-  src: url("/assets/fonts/poppins/poppins-v15-latin-600.eot"); /* IE9 Compat Modes */
-  src: local("Poppins SemiBold"), local("Poppins-SemiBold"),
-    url("/assets/fonts/poppins/poppins-v15-latin-600.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("/assets/fonts/poppins/poppins-v15-latin-600.woff2")
-      format("woff2"),
-    /* Super Modern Browsers */
-      url("/assets/fonts/poppins/poppins-v15-latin-600.woff") format("woff"),
-    /* Modern Browsers */ url("/assets/fonts/poppins/poppins-v15-latin-600.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("/assets/fonts/poppins/poppins-v15-latin-600.svg#Poppins")
-      format("svg"); /* Legacy iOS */
-}
-/* poppins-700 - latin */
-@font-face {
-  font-family: "Poppins";
+  font-family: "TT Norms Pro";
   font-style: normal;
   font-weight: 700;
-  font-display: swap;
-  src: url("/assets/fonts/poppins/poppins-v15-latin-700.eot"); /* IE9 Compat Modes */
-  src: local("Poppins Bold"), local("Poppins-Bold"),
-    url("/assets/fonts/poppins/poppins-v15-latin-700.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("/assets/fonts/poppins/poppins-v15-latin-700.woff2")
-      format("woff2"),
-    /* Super Modern Browsers */
-      url("/assets/fonts/poppins/poppins-v15-latin-700.woff") format("woff"),
-    /* Modern Browsers */ url("/assets/fonts/poppins/poppins-v15-latin-700.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("/assets/fonts/poppins/poppins-v15-latin-700.svg#Poppins")
-      format("svg"); /* Legacy iOS */
+  src: local("TT Norms Pro Bold"),
+    url("/assets/fonts/tt-norms/TT Norms Pro Bold.woff") format("woff");
 }
-/* poppins-800 - latin */
+
 @font-face {
-  font-family: "Poppins";
+  font-family: "TT Norms Pro";
   font-style: normal;
   font-weight: 800;
-  font-display: swap;
-  src: url("/assets/fonts/poppins/poppins-v15-latin-800.eot"); /* IE9 Compat Modes */
-  src: local("Poppins ExtraBold"), local("Poppins-ExtraBold"),
-    url("/assets/fonts/poppins/poppins-v15-latin-800.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("/assets/fonts/poppins/poppins-v15-latin-800.woff2")
-      format("woff2"),
-    /* Super Modern Browsers */
-      url("/assets/fonts/poppins/poppins-v15-latin-800.woff") format("woff"),
-    /* Modern Browsers */ url("/assets/fonts/poppins/poppins-v15-latin-800.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("/assets/fonts/poppins/poppins-v15-latin-800.svg#Poppins")
-      format("svg"); /* Legacy iOS */
+  src: local("TT Norms Pro ExtraBold"),
+    url("/assets/fonts/tt-norms/TT Norms Pro ExtraBold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "TT Norms Pro";
+  font-style: normal;
+  font-weight: 900;
+  src: local("TT Norms Pro Black"),
+    url("/assets/fonts/tt-norms/TT Norms Pro Black.woff") format("woff");
+}
+
+@font-face {
+  font-family: "TT Norms Pro";
+  font-style: normal;
+  font-weight: 1000;
+  src: local("TT Norms Pro ExtraBlack"),
+    url("/assets/fonts/tt-norms/TT Norms Pro ExtraBlack.woff") format("woff");
 }
