--- a/public/assets/themes/dark-theme.less
+++ b/public/assets/themes/dark-theme.less
@@ -6,7 +6,7 @@
 @info-color: #1ecbe1;
 @success-color: #1ee196;
 @border-radius-base: 4px;
-@font-family: "Inter", "Segoe UI", sans-serif;
+@font-family: "Inter", "Segoe UI", sans-serif !important;
 @body-background: #141414;
 @processing-color: #1e6ae1;
 @component-background: #181818;
