--- a/public/assets/themes/light-theme.less
+++ b/public/assets/themes/light-theme.less
@@ -7,7 +7,7 @@
 @info-color: #1e6ae1;
 @success-color: #1ee196;
 @border-radius-base: 4px;
-@font-family: "Inter", "Segoe UI", sans-serif;
+@font-family: "Inter", "Segoe UI", sans-serif !important;
 @text-color-secondary: #8c8c8c;
 @processing-color: #1e6ae1;
 @body-background: white;
