feat: :sparkles: Sidebar

--- a/public/assets/styles/custom.scss
+++ b/public/assets/styles/custom.scss
@@ -23,9 +23,9 @@
     z-index: 2;
   }
 
-  svg {
-    // fill: white;
-  }
+  // svg {
+  //   // fill: white;
+  // }
 
   .ce-block--selected .ce-block__content {
     background: transparent !important;
